--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,6 +7,46 @@ media_folder: "static/img" # Media files will be stored in the repo under static
 public_folder: "/img/" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
+  - name: pages
+    label: Pages
+    label_singular: "Page"
+    folder: src/pages
+    create: true
+    # adding a nested object will show the collection folder structure
+    nested:
+      depth: 100 # max depth to show in the collection tree
+      summary: "{{title}}" # optional summary for a tree node, defaults to the inferred title field
+    fields:
+      - label: Title
+        name: title
+        widget: string
+      - label: Body
+        name: body
+        widget: markdown
+    # adding a meta object with a path property allows editing the path of entries
+    # moving an existing entry will move the entire sub tree of the entry to the new location
+    meta: { path: { widget: string, label: "Path", index_file: "index" } }
+
+  - name: docs
+    label: Project
+    label_singular: "Page"
+    folder: docs
+    create: true
+    # adding a nested object will show the collection folder structure
+    nested:
+      depth: 100 # max depth to show in the collection tree
+      summary: "{{title}}" # optional summary for a tree node, defaults to the inferred title field
+    fields:
+      - label: Title
+        name: title
+        widget: string
+      - label: Body
+        name: body
+        widget: markdown
+    # adding a meta object with a path property allows editing the path of entries
+    # moving an existing entry will move the entire sub tree of the entry to the new location
+    meta: { path: { widget: string, label: "Path", index_file: "index" } }
+
   - name: blog
     label: "blog"
     folder: blog
@@ -30,3 +70,41 @@ collections:
           - { name: title, label: Title, widget: string }
           - { name: url, label: URL, widget: string }
           - { name: imageUrl, label: ImageURL, widget: string }
+
+  - name: blog français
+    label: "blog fr"
+    folder: i18n/fr/docusaurus-plugin-content-blog
+    identifier_field: title
+    extension: md
+    widget: "list"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields:
+      - { name: title, label: Title, widget: string }
+      - { name: body, label: Body, widget: markdown }
+      - { name: slug, label: Slug, widget: string }
+      - label: "Tags"
+        name: "tags"
+        widget: "list"
+      - label: "Authors"
+        name: "authors"
+        widget: "list"
+        fields:
+          - { name: name, label: Name, widget: string }
+          - { name: title, label: Title, widget: string }
+          - { name: url, label: URL, widget: string }
+          - { name: imageUrl, label: ImageURL, widget: string }
+
+  - label: "Config"
+    name: "config"
+    files:
+      - label: "ReadMe"
+        name: "readme"
+        file: "README.md"
+        fields:
+          - { label: Body, name: body, widget: markdown }
+      - label: "Sidebar"
+        name: "sidebar"
+        file: "sidebars.js"
+        fields:
+          - { label: Body, name: body, widget: markdown }
