--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
 	"editor.insertSpaces": false,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"cSpell.words": ["fabpsa", "Infima", "mxschmitt"]
+	"cSpell.words": ["Decap", "fabpsa", "Infima", "mxschmitt"]
 }
