--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fabpsa-au",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"docusaurus": "docusaurus",
@@ -17,20 +17,21 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
-		"@docusaurus/core": "2.4.3",
-		"@docusaurus/preset-classic": "2.4.3",
-		"@mdx-js/react": "^1.6.22",
+		"@docusaurus/core": "3.0.0",
+		"@docusaurus/preset-classic": "3.0.0",
+		"@mdx-js/react": "^3.0.0",
 		"clsx": "^1.2.1",
-		"prism-react-renderer": "^1.3.5",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"prism-react-renderer": "^2.1.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0"
 	},
 	"devDependencies": {
-		"@docusaurus/module-type-aliases": "2.4.3",
-		"@tsconfig/docusaurus": "^1.0.5",
+		"@docusaurus/module-type-aliases": "3.0.0",
+		"@docusaurus/tsconfig": "3.0.0",
+		"@docusaurus/types": "3.0.0",
 		"dotenv": "^16.3.1",
-		"prettier": "3.0.3",
-		"typescript": "^4.7.4"
+		"prettier": "^3.1.0",
+		"typescript": "~5.2.2"
 	},
 	"browserslist": {
 		"production": [
@@ -39,12 +40,12 @@
 			"not op_mini all"
 		],
 		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
+			"last 3 chrome version",
+			"last 3 firefox version",
+			"last 5 safari version"
 		]
 	},
 	"engines": {
-		"node": ">=16.14"
+		"node": ">=18.0"
 	}
 }
