--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,8 +21,8 @@ collections:
       - label: Body
         name: body
         widget: markdown
-    nested:
-      depth: 100
-      summary: "{{title}}"
-    # Deactivated because doesn't work well; https://decapcms.org/docs/beta-features/#nested-collections
+    # Deactivated because doesn't work well; https://decapcms.org/docs/collection-nested/
+    # nested:
+    #   depth: 100
+    #   summary: "{{title}}"
     # meta: { path: { widget: string, label: "Path", index_file: "index" } }
