Add French translation

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
 		"streetsidesoftware.code-spell-checker",
-		"esbenp.prettier-vscode"
+		"streetsidesoftware.code-spell-checker-french-reforme"
 	]
 }
