--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,13 @@
 		'''
 
 [[redirects]]
+	from = "/"
+	to = "/fr"
+	status = 302
+	force = true
+	conditions = {Language = ["fr"]}
+
+[[redirects]]
 	from = "/fr/*"
 	to = "/fr/404.html"
 	status = 404
